wrap the flash notice with fixed height div

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,6 @@
+.notice-area {
+	height: 50px;
+}
 .home {
   .signup-block {
 	h3 {
